--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -1,21 +1,20 @@
-from casual.middleware.make.dsl import *
+from casual.make.api import *
 
 IncludePaths([
    'include',
    '../common/include',
    '../xatmi/include',
-   '../serviceframework/include',
-   '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
-   ])
+   '../serviceframework/include'] + 
+   casual_make_optional_include_paths().split())
 
 
 LibraryPaths([
     'bin',
     '../common/bin',
     '../serviceframework/bin',
-    '../xatmi/bin',
-    '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
-    ])
+    '../xatmi/bin'] + 
+    casual_make_optional_library_paths().split()
+   )
 
 install_libs = []
 
@@ -91,8 +90,10 @@ LinkExecutable( 'bin/casual-configuration-documentation',
       'casual-common'
    ])  
 
+casual_home = os.getenv('CASUAL_HOME')
+
 # Install
-Install( install_libs, '$(CASUAL_HOME)/lib')
-Install( 'resources.yaml', '$(CASUAL_HOME)/configuration/example')
+Install( install_libs,  casual_home + '/lib')
+Install( 'resources.yaml',  casual_home + '/configuration/example')
 
 
