--- a/middleware/cli/makefile.cmk
+++ b/middleware/cli/makefile.cmk
@@ -1,18 +1,18 @@
-from casual.middleware.make.dsl import *
+from casual.make.api import *
 
 IncludePaths([
    'include',
    '../common/include',
-   '../xatmi/include',
-   '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
-   ])
+   '../xatmi/include'] + 
+   casual_make_optional_include_paths().split()
+   )
 
 
 LibraryPaths([
     'bin',
-    '../common/bin',
-    '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
-    ])
+    '../common/bin'] + 
+    casual_make_optional_library_paths().split()
+   )
 
 intall_lib = []
 intall_bin = []
@@ -42,8 +42,10 @@ intall_lib.append( lib_cli)
 #       'casual-unittest',
 #   ])  
 
+casual_home = os.getenv('CASUAL_HOME')
+
 # Install
-Install( intall_lib, '$(CASUAL_HOME)/lib')
-Install( intall_bin, '$(CASUAL_HOME)/bin')
+Install( intall_lib,  casual_home + '/lib')
+Install( intall_bin,  casual_home + '/bin')
 
 
