--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -4,10 +4,10 @@
 # needed when building casual (it's used internal to know where to log and stuff 
 # like that)
 export CASUAL_BUILD_HOME=`git rev-parse --show-toplevel`
+export CASUAL_MAKE_HOME=$CASUAL_BUILD_HOME/../casual-make/source
 
 # PYTHONPATH so casual-make and other python stuff works
-export PYTHONPATH=$CASUAL_BUILD_HOME/..:$PYTHONPATH
-
+export PYTHONPATH=$CASUAL_BUILD_HOME/make:$CASUAL_MAKE_HOME:$PYTHONPATH
 
 # Third party dependencies.
 if [[ -z "${CASUAL_THIRDPARTY}" ]]; then
@@ -21,12 +21,12 @@ fi
 # in the build-chain.
 # 
 # googletest is added default since it is used a lot
-export CASUAL_OPTIONAL_INCLUDE_PATHS=${CASUAL_THIRDPARTY}/googletest/include
-export CASUAL_OPTIONAL_LIBRARY_PATHS=${CASUAL_THIRDPARTY}/googletest/bin
+export CASUAL_MAKE_OPTIONAL_INCLUDE_PATHS=${CASUAL_THIRDPARTY}/googletest/include
+export CASUAL_MAKE_OPTIONAL_LIBRARY_PATHS=${CASUAL_THIRDPARTY}/googletest/bin
 
 # Setting up PATH. Make sure build-path is "first" so you're sure you're using what you're
 # building
-export PATH=$CASUAL_BUILD_HOME/bin:$PATH
+export PATH=$CASUAL_BUILD_HOME/bin:$CASUAL_MAKE_HOME:$PATH
 
 # So our tools (build-server in particular) finds dependent libs
 export LD_LIBRARY_PATH=$CASUAL_BUILD_HOME/bin:$LD_LIBRARY_PATH
@@ -35,7 +35,7 @@ export LD_LIBRARY_PATH=$CASUAL_BUILD_HOME/bin:$LD_LIBRARY_PATH
 # the casual product to a specific "place" (this "place" is also used when package 
 # casual to a proper installation)
 #
-# export CASUAL_HOME=$HOME/usr/local/casual
+export CASUAL_HOME=$HOME/usr/local/casual
 
 # Defines what will be logged. 
 # See: $CASUAL_BUILD_HOME/middleware/common/log.md for more information about loggin
