--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -1,4 +1,4 @@
-from casual.middleware.make.dsl import *
+from casual.make.api import *
 
 
 
@@ -7,9 +7,9 @@ IncludePaths([
    '../common/include',
    '../xatmi/include',
    '../buffer/include',
-   '../domain/include',
-   '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
-   ])
+   '../domain/include'] + 
+   casual_make_optional_include_paths().split()
+   )
 
 
 LibraryPaths([
@@ -19,9 +19,9 @@ LibraryPaths([
     '../xatmi/bin',
     '../domain/bin',
     '../configuration/bin',
-    '../serviceframework/bin',
-    '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
-    ])
+    '../serviceframework/bin'] + 
+    casual_make_optional_library_paths().split()
+   )
 
 
 install_lib = []
@@ -87,10 +87,11 @@ LinkUnittest( 'unittest/bin/test-http',
       'curl'
    ])  
    
+casual_home = os.getenv('CASUAL_HOME')
 
-Install( install_bin,'$(CASUAL_HOME)/bin')
-Install( install_lib,'$(CASUAL_HOME)/lib')
-Install( install_headers,'$(CASUAL_HOME)/include')
+Install( install_bin, casual_home + '/bin')
+Install( install_lib, casual_home + '/lib')
+Install( install_headers, casual_home + '/include')
 
 
 
