--- a/middleware/tools/makefile.cmk
+++ b/middleware/tools/makefile.cmk
@@ -1,22 +1,22 @@
-from casual.middleware.make.dsl import *
+from casual.make.api import *
 
 
 IncludePaths( ['include',
     '../common/include',
     '../xatmi/include',
     '../configuration/include',
-    '../serviceframework/include',
-    '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
-    ])
+    '../serviceframework/include'] + 
+    casual_make_optional_include_paths().split()
+    )
 
 LibraryPaths( ['bin',
     '../buffer/bin',
     '../common/bin',
     '../xatmi/bin',
     '../configuration/bin',
-    '../serviceframework/bin',
-    '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
-    ])
+    '../serviceframework/bin'] + 
+    casual_make_optional_library_paths().split()
+   )
 
 
 install_bin = []
@@ -38,6 +38,9 @@ build_task_a = LinkArchive( 'bin/casual-tools-build-task',
 target = LinkExecutable( 'bin/casual-build-server',
    [ Compile( 'source/build/server/main.cpp')],
    [ common_a, build_task_a, 'casual-common', 'casual-configuration'])
+
+# setup dependency to simpler name 'casual-build-server'
+Dependencies( model.register('casual-build-server'), [target])
 
 install_bin.append( target)
 
@@ -94,9 +97,10 @@ LinkUnittest( 'bin/test-casual-tools',
 	[  common_a, 'casual-common', 'casual-unittest'])
 
 
+casual_home = os.getenv('CASUAL_HOME')
 
-Install( install_bin, '$(CASUAL_HOME)/bin')
-Install( install_lib, '$(CASUAL_HOME)/lib')
+Install( install_bin,  casual_home + '/bin')
+Install( install_lib,  casual_home + '/lib')
 
 
 
